--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,6 +12,7 @@ Click==7.0
 decorator==4.4.1
 feedparser==5.2.1
 Flask==1.1.1
+gunicorn==20.0.4
 idna==2.8
 ipython==7.11.0
 ipython-genutils==0.2.0
