Add caching to Python setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.py') }}-${{ hashFiles('requirements_dev.txt') }}          
       - name: Install deps
-        run: pip install -r requirements_dev.txt
+        run: pip install -r requirements_dev.txt -e .
       - name: Run tests
         run: pytest -vvv
